webpack server live reloading

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
   <title>Particle Playground</title>
 </head>
@@ -6,5 +7,5 @@
 <body>
   yo
   <div id="container"></div>
-  <script src='./dist/bundle.js'></script>
+  <script src='http://localhost:8080/dist/bundle.js'></script>
 </body>
