--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 <body>
   yo
-  <div id="container" style="width: 90%; height: 90vh; border:1px solid black; margin:auto"></div>
+  <div id="container" style="width: 90%; height: 90vh; border:0; margin:auto"></div>
   <script src='http://localhost:8080/dist/bundle.js'></script>
 </body>
